--- a/Todo.txt
+++ b/Todo.txt
@@ -16,9 +16,13 @@
   - 자격증을 일일히 입력하고.. 점수도 일일히 입력하고... 일단 검색시스템이 있어야하는건가....?
   - 그래프는 참 좋은데.... 쉽지가 않넹
 
+4. textfield를 rich textfield로 바꾸고 적용하기.. 아마도 model재설계도 조금 필요할듯 하다.
 
+5. 로그아웃버튼 회원가입 버튼만들어서 회원가입 할 수 있게 만들자.
 
+6. 현재 login 화면이 login.html과 상관이 없어 보인다. 왜 이렇게 된건지 django 문서같은걸 확인해 보아야 할 것 같다.
 
+7. email을 통한 password reset 기능을 구현하기위해서 어떤 인증이 필요한지 알아봐야 할 것 같다.
 
 
 정보제공기능
