adding rate model

--- a/Todo.txt
+++ b/Todo.txt
@@ -24,6 +24,10 @@
 
 7. email을 통한 password reset 기능을 구현하기위해서 어떤 인증이 필요한지 알아봐야 할 것 같다.
 
+8. mainpage디자인 수정을좀 하고싶다. 으앜
+
+9.http://dcollection.korea.ac.kr/public_resource/pdf/000000076963_20201011165924.pdf
+징집병과 모집병의 차이에 관해 연구한 자료임. 고대에서 연구했으니 나름 신빙성 있을지도? 2017년 연구자료인건 조금 아쉽당.
 
 정보제공기능
 특정 모집병에 관심이 있는 사람들은, 가장 먼저 해당 모집병의 선별요강, 모집정원 등을 확인하게 될 것이다.
